Implemented generic implementation for height curves loading/parsing